# dx7s-editor

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
dx7s-editor/: CMakeLists.txt  dx7s-editor.cpp  dx7s-editor.h
include/: dx7s-editor.h
include/glad/: glad.h
src/: CMakeLists.txt  dx7s-editor.cpp  glad.c
